--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,7 @@
 
 // If you want to add something do it here
 @import "custom";
+@import "multiselect";
 
 .card-header > .c-icon:first-child {
   margin-right: 0.1rem;
