--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -8,3 +8,7 @@ ul.header-nav li.nav-item:hover{
 .km-input-ar input, .km-input-ar textarea{
     direction: rtl;
 }
+
+.form-group label{
+    font-weight: 700;
+}  
