--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -8,6 +8,12 @@ ul.header-nav li.nav-item:hover{
 .km-input-ar input, .km-input-ar textarea{
     direction: rtl;
 }
+.km-value{
+    background-color: #f5f5f5!important;
+    border: 1px solid #ccc!important;
+    border: 1px solid rgba(0, 0, 0, 0.15)!important;
+    color:#333;
+}
 
 .form-group label{
     font-weight: 700;
