--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -25,3 +25,24 @@ ul.header-nav li.nav-item:hover{
  font-awesome-icon{
     padding-right: 5px;
  }
+
+
+ .has-error .help-block, .has-error .control-label, .has-error .radio, .has-error .checkbox, 
+ .has-error .radio-inline, .has-error .checkbox-inline, .has-error.radio label, .has-error.checkbox label, 
+ .has-error.radio-inline label, .has-error.checkbox-inline label, .has-error .multiselect .multiselect__tags {
+    color: #a94442;
+}
+
+.has-error .form-control,
+.has-error .multiselect .multiselect__tags {
+    border-color: #a94442;
+    -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+}
+
+.has-error .input-group-text,
+.has-error .multiselect .multiselect__tags {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #a94442;
+}
