--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -54,3 +54,6 @@ ul.header-nav li.nav-item:hover{
 .v-toast.v-toast--top {
     z-index: 1000000;
 }
+.multiselect__content-wrapper{
+    background: #d0cbcb;
+}
