--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -51,3 +51,9 @@ ul.header-nav li.nav-item:hover{
     pointer-events: none;
     opacity: 0.4;
 }
+.v-toast.v-toast--top {
+    z-index: 1000000;
+}
+.multiselect__content-wrapper{
+    background: #d0cbcb;
+}
