--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -54,6 +54,10 @@ ul.header-nav li.nav-item:hover{
 .v-toast.v-toast--top {
     z-index: 1000000;
 }
-.multiselect__content-wrapper{
-    background: #d0cbcb;
+.multiselect__content-wrapper,
+.form-control:focus {
+    box-shadow: 0 0 0 0.15rem rgba(3, 39, 94, 0.25);
+}
+.mb-0{
+    margin-bottom: 0px!important;
 }
