--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -61,3 +61,11 @@ ul.header-nav li.nav-item:hover{
 .mb-0{
     margin-bottom: 0px!important;
 }
+
+
+.border-left-info {
+    border-left-color: #39f!important
+}
+.border-left-3 {
+    border-left-width: 3px!important;
+}
