update ckeditor build

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -69,3 +69,7 @@ ul.header-nav li.nav-item:hover{
 .border-left-3 {
     border-left-width: 3px!important;
 }
+
+.ck-content ul:first{
+    padding-left: 10px;
+}
