show user info on dashboard

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -73,3 +73,7 @@ ul.header-nav li.nav-item:hover{
 .ck-content ul:first{
     padding-left: 10px;
 }
+
+.comma:not(:last-of-type):after {
+    content: ", ";
+}
