make side bar foldable

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -79,3 +79,7 @@ ul.header-nav li.nav-item:hover{
     color: unset;
     text-decoration: unset;
 }
+
+.hand-cursor:hover{
+    cursor: pointer;
+}
