--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -83,3 +83,8 @@ ul.header-nav li.nav-item:hover{
 .hand-cursor:hover{
     cursor: pointer;
 }
+
+.alert-sm{
+    padding: 0.5rem;
+    margin: 0;
+}
