--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -9,10 +9,10 @@ ul.header-nav li.nav-item:hover{
     direction: rtl;
 }
 .km-value{
-    background-color: #f5f5f5!important;
-    border: 1px solid #ccc!important;
-    border: 1px solid rgba(0, 0, 0, 0.15)!important;
-    color:#333;
+    border-width: #{$card-border-width};
+    border-color: #{$card-border-color};
+    border-radius: #{$card-border-radius};
+    box-shadow: #{$card-box-shadow};
 }
 
 .form-group label{
