Show page title next to tour link

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -107,6 +107,7 @@ ul.header-nav li.nav-item:hover{
 }
 
 
+[data-v-onboarding-wrapper] svg,
 [data-v-onboarding-wrapper] [data-popper-placement]{
     z-index: 10000 !important;
 }
