--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -18,12 +18,12 @@ ul.header-nav li.nav-item:hover{
 .form-group label{
     font-weight: 700;
 }
-.km-value-ml-html.ck-content ul {
-    list-style: none;
- } 
- .km-value-ml-html.ck-content ul:first{
-    padding-left: 10px;
-}
+// .km-value-ml-html.ck-content ul {
+//     list-style: none;
+//  } 
+//  .km-value-ml-html.ck-content ul:first{
+//     padding-left: 10px;
+// }
 .km-form-group .mandatory{
     border-left: 5px solid red;
     padding-left: 10px;
