--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -1,18 +1,27 @@
 // Here you can add other styles
 
 ul.header-nav li.nav-item:hover{
-    background-color: #eee;
+    background-color: var(--cui-tertiary-bg);
     border-radius: 5%;
 }
+.search-item .card:hover{
+    background-color: var(--cui-header-hover-color);
+    color: var(--cui-sidebar-nav-link-hover-color)!important;        
+    background: var(--cui-sidebar-nav-link-hover-bg)!important;
+}
+.header-nav .nav-link:hover, .header-nav .nav-link:focus {
+    color: var(--cui-header-hover-color);
+}
+
 
 .km-input-ar input, .km-input-ar textarea{
     direction: rtl;
 }
 .km-value{
-    background-color: #f5f5f5!important;
-    border: 1px solid #ccc!important;
-    border: 1px solid rgba(0, 0, 0, 0.15)!important;
-    color:#333;
+    border-width: #{$card-border-width};
+    border-color: #{$card-border-color};
+    border-radius: #{$card-border-radius};
+    box-shadow: #{$card-box-shadow};
 }
 
 .form-group label{
